# torrent-rs

./: AGENTS.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/prompts/: code-review.prompt.md
.github/skills/bt-protocol/: SKILL.md
.github/skills/documentation-writing/: SKILL.md
.github/skills/documentation-writing/references/: README-template.md  module-doc-template.md
.github/skills/event-driven-design/: SKILL.md
.github/skills/logging-conventions/: SKILL.md
.github/skills/usage-scenarios/: SKILL.md
.github/workflows/: build+test.yml  release.yml
crates/torrent/: Cargo.toml  README.md
crates/torrent-core/: Cargo.toml  README.md
crates/torrent-core/src/: error.rs  lib.rs  spec.rs
crates/torrent-core/src/bencode/: decode.rs  encode.rs  mod.rs  util.rs
crates/torrent-core/src/dht/: kbucket.rs  krpc.rs  mod.rs
crates/torrent-core/src/magnet/: mod.rs
crates/torrent-core/src/metainfo/: builder.rs  mod.rs  parse.rs
crates/torrent-core/src/peer/: extension.rs  handshake.rs  lsd.rs  message.rs  metadata.rs  mod.rs  pex.rs
crates/torrent-core/src/piece/: manager.rs  mod.rs  selector.rs
crates/torrent-core/src/storage/: mod.rs
crates/torrent-core/src/tracker/: mod.rs
crates/torrent-core/tests/: bencode.rs  bencode_proptests.rs  magnet.rs  metainfo.rs
crates/torrent-core/tests/data/: mod.rs
crates/torrent-core/tests/proptest-regressions/: bencode_proptests.txt
crates/torrent/examples/: dht_discovery.rs  download_torrent.rs  magnet_download.rs  parse_metainfo.rs  peer_connect.rs  peer_pair.rs  seed_torrent.rs  session_manage.rs  tracker_announce.rs  webseed_download.rs
crates/torrent/examples/data/: .gitignore  debian-13.5.0-amd64-netinst.iso.torrent
crates/torrent/src/: lib.rs
crates/torrent/src/dht/: mod.rs  node.rs  query.rs  rpc.rs
crates/torrent/src/net/: http.rs  mod.rs  tls.rs
crates/torrent/src/peer/: mod.rs  stream.rs
crates/torrent/src/session/: builder.rs  config.rs  download.rs  lsd.rs  mod.rs  peer_manager.rs  peer_mgr.rs  torrent.rs  uni_deque.rs  upload.rs  webseed.rs
crates/torrent/src/session/download/: announce.rs  builder.rs  choke.rs  mod.rs  peer.rs  pex.rs  pieces.rs  types.rs
crates/torrent/src/session/seed/: hash.rs  mod.rs  source.rs  storage.rs  storage_adapter.rs  verify.rs
crates/torrent/src/session/swarm/: announce.rs  choke.rs  handle.rs  mod.rs  peer.rs  pex.rs  pieces.rs  types.rs
crates/torrent/src/session/webseed/: fetcher.rs  mod.rs  scheduler.rs  types.rs
crates/torrent/src/storage/: file_backend.rs  mod.rs
crates/torrent/src/tracker/: http.rs  into_url.rs  mod.rs  udp.rs
crates/torrent/tests/: dht_rpc.rs  fast_extension.rs  lsd.rs  peer_stream.rs  pex.rs  session.rs  super_seed.rs
src/: error.rs  lib.rs
src/bencode/: decode.rs  encode.rs  mod.rs
src/dht/: krpc.rs  mod.rs  query.rs  rpc.rs
src/magnet/: mod.rs
src/metainfo/: mod.rs  parse.rs
src/peer/: handshake.rs  message.rs  mod.rs  stream.rs
src/session/: download.rs  mod.rs  peer_manager.rs  torrent.rs  upload.rs
src/storage/: file_backend.rs  mod.rs  piece_selector.rs
src/tracker/: mod.rs  udp.rs
tests/: bencode.rs  bencode_proptests.rs  magnet.rs  metainfo.rs
tests/proptest-regressions/: bencode_proptests.txt
