[workspace]
members = ["crates/torrent-core", "crates/torrent"]
resolver = "2"

[workspace.dependencies]
bytes = "1.11"
proptest = "1.11"
rand = "0.8"
sha1 = "0.10"
tempfile = "3.27"
tokio = { version = "1.52", features = [
    "net",
    "rt",
    "macros",
    "time",
    "io-util",
    "fs",
    "sync",
] }
url = "2.5"
