[workspace]
members = ["crates/torrent-core", "crates/torrent"]
resolver = "2"

[workspace.package]
version = "0.1.0"
repository = "https://github.com/mogeko/torrent-rs"
homepage = "https://github.com/mogeko/torrent-rs"
authors = ["Zheng Junyi <zhengjunyi@live.com>"]
edition = "2024"
license = "MIT"

[workspace.dependencies]
bytes = "1.11"
proptest = "1.11"
rand = "0.10"
rustls = "0.23"
rustls-native-certs = "0.8"
sha1 = "0.11"
tempfile = "3.27"
tokio = { version = "1.52", features = [
    "net",
    "rt",
    "macros",
    "time",
    "io-util",
    "fs",
    "sync",
] }
tokio-rustls = "0.26"
url = "2.5"
