[package]
name = "torrent-core"
version.workspace = true
description = "Low-level core abstractions for the BitTorrent protocol — bencode, metainfo parsing, peer wire protocol types, DHT/Kademlia, piece management, and storage traits. Zero async dependencies."
edition.workspace = true
rust-version = "1.87"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["bittorrent", "bencode", "p2p", "torrent", "protocol"]
categories = ["network-programming", "parsing"]
readme = "README.md"

[features]
serde = ["bytes/serde", "dep:serde"]

[dependencies]
bytes.workspace = true
rand.workspace = true
serde = { workspace = true, optional = true }
sha1.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
