[package]
name = "torrent"
version = "0.1.0"
edition = "2024"

[dependencies]
torrent-core = { path = "../torrent-core" }
bytes.workspace = true
rand.workspace = true
sha1.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
