[package]
name = "torrent"
version.workspace = true
description = "High-level async BitTorrent library — session management, HTTP/UDP tracker communication, DHT networking, peer connections, and file storage. Built on torrent-core with tokio."
edition.workspace = true
rust-version = "1.87"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["bittorrent", "p2p", "torrent", "async", "tokio"]
categories = ["network-programming", "asynchronous"]
readme = "README.md"

[dependencies]
torrent-core.workspace = true
rand.workspace = true
rustls.workspace = true
rustls-native-certs.workspace = true
sha1.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true

[dev-dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]
